# ChangeLog for app-text/notecase
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/notecase/ChangeLog,v 1.13 2008/02/20 19:07:19 nixnut Exp $

  20 Feb 2008; nixnut <nixnut@gentoo.org> notecase-1.7.6.ebuild:
  Added ~ppc wrt bug 207679

*notecase-1.7.9 (05 Feb 2008)

  05 Feb 2008; Raúl Porcel <armin76@gentoo.org> +notecase-1.7.9.ebuild:
  Version bump

  20 Jan 2008; Raúl Porcel <armin76@gentoo.org> notecase-1.7.6.ebuild:
  Fix sed, bug #206755

*notecase-1.7.6 (15 Jan 2008)

  15 Jan 2008; Raúl Porcel <armin76@gentoo.org> -notecase-1.7.4.ebuild,
  +notecase-1.7.6.ebuild:
  Version bump, remove old

*notecase-1.7.4 (09 Dec 2007)

  09 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  -files/notecase-1.6.9-CFLAGS.patch, -notecase-1.6.9.ebuild,
  -notecase-1.7.2.ebuild, +notecase-1.7.4.ebuild:
  Version bump, remove old

*notecase-1.7.2 (13 Nov 2007)

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  +files/notecase-1.7.2-CFLAGS.patch, +notecase-1.7.2.ebuild:
  Version bump

  06 Nov 2007; Samuli Suominen <drac@gentoo.org> notecase-1.6.9.ebuild:
  Keyword ~amd64 wrt #196185 and update caches using fdo-mime eclass.

*notecase-1.6.9 (02 Oct 2007)

  02 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  -files/notecase-1.6.5-CFLAGS.patch, +files/notecase-1.6.9-CFLAGS.patch,
  -notecase-1.6.6.ebuild, +notecase-1.6.9.ebuild:
  Version bump, bug #194494

*notecase-1.6.6 (17 Sep 2007)

  17 Sep 2007; Raúl Porcel <armin76@gentoo.org> -notecase-1.6.5.ebuild,
  +notecase-1.6.6.ebuild:
  Version bump, old

*notecase-1.6.5 (31 Aug 2007)

  31 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  -files/notecase-1.5.8-CFLAGS.patch, -files/notecase-1.6.1-CFLAGS.patch,
  +files/notecase-1.6.5-CFLAGS.patch, -notecase-1.5.8.ebuild,
  -notecase-1.6.1.ebuild, +notecase-1.6.5.ebuild:
  Version bump

*notecase-1.6.1 (02 Aug 2007)

  02 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  +files/notecase-1.6.1-CFLAGS.patch, +notecase-1.6.1.ebuild: