@@ -1,7 +1,5 @@
 AUX notecase-1.7.2-CFLAGS.patch 1203 RMD160 a89ccc160e7bee4c98bd92653700fe435d7c0d40 SHA1 b44420aa193f8c5023b7e754bd97010fbbde61af SHA256 53074fbf036c4944760764c6304735a63f5a64bfaa3eb6d4de0ab8b4da6a9890
-DIST notecase-1.7.6_src.tar.gz 878978 RMD160 1d14013a03f891c0228d23d941447caaa1589246 SHA1 5ce29214bb534fad1492538c8ca9032235add50e SHA256 c8069d1b7cb752f39466878eb3b609c710ca0e64c95d1bef2f51f9bd6a66d374
-DIST notecase-1.7.9_src.tar.gz 881014 RMD160 f24e43b2f1012f074876a52dba40ce69421fb27e SHA1 c18d2445d85551a83cf93f2d61a4d1c4bc1f94bd SHA256 6ed07c0f91042f9bea6bdbc6c24b8e3abc3f052562eed471a3de78b744d28a61
-EBUILD notecase-1.7.6.ebuild 1388 RMD160 e957ace7cbf6216a5832946f6f476cc73f037d10 SHA1 ae8d7724621c843354385f9bad7336be4a250351 SHA256 0461a835a33dab4e9a0616e49050e5c525cf973e6bf3afdbc02b30a808eb4709
-EBUILD notecase-1.7.9.ebuild 1384 RMD160 13ce5569c09f8a6c9812037c21c3b0bd4da2fefb SHA1 2b65ba11e1ff92f9f6bdbe92bec877551663f6bc SHA256 ffc6da162d07294e59732f5363671b8367529025ffdbc552467bc212bc16f27b
-MISC ChangeLog 2436 RMD160 07541c2ef1a13099e10de1218d83fe8b876f5b98 SHA1 3e87502304f5a524ef55ae104a3802d7f78698f3 SHA256 db7dabde98fa3c70fdfd370b249c964cfde4071d5e3627e019ff5e62a8a61f88
+DIST notecase-1.8.1_src.tar.gz 883359 RMD160 602ec3112ac1ff191aaa074cef2ddc06894e3757 SHA1 d19f09e781fc0d8552b20d4ae607110f00935751 SHA256 94f434f6e8c68136978fde763d375dd33e60676cc9d5737192b867318069c2f7
+EBUILD notecase-1.8.1.ebuild 1384 RMD160 b6508b633a9a8626b0b3b8d680243a81925ba23d SHA1 bfcd70de7357897cfd42c55b443b8227b6d451ca SHA256 775a1935fff3fb7c65b2244f507348b0dc6f5e2bc632ee476af3c9e4629031e0
+MISC ChangeLog 2619 RMD160 100c7753c60e0bedfc7a60fefc782d7ed99f9548 SHA1 7798eb9f9d60b5cc7388bb689bc835dde72ec59e SHA256 5f1117fd4152e8dc1e054163db722a0a94180df64677440cb3f81b83ab447b88
 MISC metadata.xml 223 RMD160 f88bcdebf752bcc3933b4159df5d8f9f7d487ca1 SHA1 4a17e70b26b3bba2ec6eddb403ff890bb8bcf13f SHA256 98c023870e5fbbcc4f050a192947b7b6bbd239041c9f921b3fbf64b03523019f
