@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/notecase/notecase-1.7.6.ebuild,v 1.3 2008/02/20 19:07:19 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/notecase/notecase-1.8.1.ebuild,v 1.1 2008/02/28 10:52:16 armin76 Exp $
 
 inherit eutils fdo-mime
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}_src.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE="gnome nls"
 
 RDEPEND=">=x11-libs/gtk+-2.6"
