@@ -1,6 +1,12 @@
 # ChangeLog for app-text/notecase
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/notecase/ChangeLog,v 1.13 2008/02/20 19:07:19 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/notecase/ChangeLog,v 1.14 2008/02/28 10:52:16 armin76 Exp $
+
+*notecase-1.8.1 (28 Feb 2008)
+
+  28 Feb 2008; Raúl Porcel <armin76@gentoo.org> -notecase-1.7.6.ebuild,
+  -notecase-1.7.9.ebuild, +notecase-1.8.1.ebuild:
+  Version bump, remove old
 
   20 Feb 2008; nixnut <nixnut@gentoo.org> notecase-1.7.6.ebuild:
   Added ~ppc wrt bug 207679
